# openconfig_interfaces_example

./: .gitignore  CMakeLists.txt  CompileOptions.cmake
CMakeModules/: FindSYSREPO.cmake
models/: openconfig-if-ethernet.yang
src/interfaces/: CMakeLists.txt  main.c  plugin.c  plugin.h
src/interfaces/plugin/: common.h  context.h
src/interfaces/plugin/subscription/: change.c  change.h
